blue-green/app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    run: app
    version: '1.0'
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
